--- a/app/games/stats/styles.less
+++ b/app/games/stats/styles.less
@@ -1,5 +1,9 @@
 .statsPage {
 
+    dynamic-tables {
+        height: 100%;
+    }
+
     padding: 40px 60px;
     height: 100%;
     overflow-y: auto;
