--- a/theme/css-tooltip.less
+++ b/theme/css-tooltip.less
@@ -9,7 +9,7 @@ div.css-tooltip {
 
 .css-tooltip .tooltiptext{
     visibility: hidden;
-    width: 200px;
+    width: 190px;
     background-color: black;
     opacity: .9;
     color: #fff;
